# PySeesAbq

./: .gitignore  CHANGELOG.md  COMPANY_SETUP.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  TOOL_SUMMARY.md  dev.py  example.py  pyproject.toml  setup.py
abaqus2openseespy/: converter.py  mapping.py  parser.py
examples/: cantilever_beam.converted.py  cantilever_beam.py  simple_beam.inp  simple_beam.py  simple_plate.inp  simple_plate.py
pyseesabq/: __init__.py  __main__.py  cli.py  converter.py  core.py  mapping.py  parser_new.py  parser_old.py
tests/: test_converter.py  test_parser.py
